fixed some issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1369,6 +1369,10 @@ body.pg-loaded>.inner {
   width: 1.5rem;
 }
 
+.w-10\/12{
+  width: 83.333333%;
+}
+
 .max-w-3xl{
   max-width: 48rem;
 }
@@ -1649,6 +1653,10 @@ body.pg-loaded>.inner {
 
   .md\:w-6\/12{
     width: 50%;
+  }
+
+  .md\:w-\[400px\]{
+    width: 400px;
   }
 
   .md\:gap-0{
